# chrome-extension-analyzer-tool

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/models/: __init__.py  data.py  extension.py  manifest.py
src/services/: __init__.py  ai_analyzer.py  analyzer.py  downloader.py
